The data from dataframe: hulu_titles, was transformed.

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -5384,6 +5384,430 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#   Definimos la nueva denominación que tendrán las columnas de interes\n",
+    "renamed_columns = {\n",
+    "                    \"show_id\":\"id_show\",\n",
+    "                    \"type\":\"tipo\",\n",
+    "                    \"title\":\"titulo\",\n",
+    "                    \"cast\":\"elenco\",\n",
+    "                    \"date_added\":\"fecha_añadidura\",\n",
+    "                    \"release_year\":\"estreno\",\n",
+    "                    \"duration\":\"duracion\",\n",
+    "                    \"listed_in\":\"genero_cinematrografico\"\n",
+    "                    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jose Salas\\AppData\\Local\\Temp\\ipykernel_24544\\3981257418.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dsny_edit_df.rename(columns = renamed_columns, inplace = True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Renombrar el dataframe\n",
+    "hl_edit_df.rename(columns = renamed_columns, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jose Salas\\AppData\\Local\\Temp\\ipykernel_24544\\4100712.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dsny_edit_df[\"plataforma\"] = \"Disney Plus\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Añadir tipo de plataforma\n",
+    "hl_edit_df[\"plataforma\"] = \"Hulu\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_show</th>\n",
+       "      <th>tipo</th>\n",
+       "      <th>titulo</th>\n",
+       "      <th>elenco</th>\n",
+       "      <th>fecha_añadidura</th>\n",
+       "      <th>estreno</th>\n",
+       "      <th>duracion</th>\n",
+       "      <th>genero_cinematrografico</th>\n",
+       "      <th>plataforma</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>s1</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Duck the Halls: A Mickey Mouse Christmas Special</td>\n",
+       "      <td>Chris Diamantopoulos, Tony Anselmo, Tress MacN...</td>\n",
+       "      <td>November 26, 2021</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>23 min</td>\n",
+       "      <td>Animation, Family</td>\n",
+       "      <td>Disney Plus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>s2</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Ernest Saves Christmas</td>\n",
+       "      <td>Jim Varney, Noelle Parker, Douglas Seale</td>\n",
+       "      <td>November 26, 2021</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>91 min</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>Disney Plus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>s3</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Ice Age: A Mammoth Christmas</td>\n",
+       "      <td>Raymond Albert Romano, John Leguizamo, Denis L...</td>\n",
+       "      <td>November 26, 2021</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>23 min</td>\n",
+       "      <td>Animation, Comedy, Family</td>\n",
+       "      <td>Disney Plus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>s4</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>The Queen Family Singalong</td>\n",
+       "      <td>Darren Criss, Adam Lambert, Derek Hough, Alexa...</td>\n",
+       "      <td>November 26, 2021</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>41 min</td>\n",
+       "      <td>Musical</td>\n",
+       "      <td>Disney Plus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>s5</td>\n",
+       "      <td>TV Show</td>\n",
+       "      <td>The Beatles: Get Back</td>\n",
+       "      <td>John Lennon, Paul McCartney, George Harrison, ...</td>\n",
+       "      <td>November 25, 2021</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1 Season</td>\n",
+       "      <td>Docuseries, Historical, Music</td>\n",
+       "      <td>Disney Plus</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  id_show     tipo                                            titulo  \\\n",
+       "0      s1    Movie  Duck the Halls: A Mickey Mouse Christmas Special   \n",
+       "1      s2    Movie                            Ernest Saves Christmas   \n",
+       "2      s3    Movie                      Ice Age: A Mammoth Christmas   \n",
+       "3      s4    Movie                        The Queen Family Singalong   \n",
+       "4      s5  TV Show                             The Beatles: Get Back   \n",
+       "\n",
+       "                                              elenco    fecha_añadidura  \\\n",
+       "0  Chris Diamantopoulos, Tony Anselmo, Tress MacN...  November 26, 2021   \n",
+       "1           Jim Varney, Noelle Parker, Douglas Seale  November 26, 2021   \n",
+       "2  Raymond Albert Romano, John Leguizamo, Denis L...  November 26, 2021   \n",
+       "3  Darren Criss, Adam Lambert, Derek Hough, Alexa...  November 26, 2021   \n",
+       "4  John Lennon, Paul McCartney, George Harrison, ...  November 25, 2021   \n",
+       "\n",
+       "   estreno  duracion        genero_cinematrografico   plataforma  \n",
+       "0     2016    23 min              Animation, Family  Disney Plus  \n",
+       "1     1988    91 min                         Comedy  Disney Plus  \n",
+       "2     2011    23 min      Animation, Comedy, Family  Disney Plus  \n",
+       "3     2021    41 min                        Musical  Disney Plus  \n",
+       "4     2021  1 Season  Docuseries, Historical, Music  Disney Plus  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Inspeccionar el df\n",
+    "hl_edit_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jose Salas\\AppData\\Local\\Temp\\ipykernel_24544\\816854927.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  amz_edit_df[\"estatus\"] = 1\n",
+      "C:\\Users\\Jose Salas\\AppData\\Local\\Temp\\ipykernel_24544\\816854927.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  amz_edit_df[\"estatus\"].loc[amz_df[\"cast\"].isnull()] = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Dar de baja lógica a los datos nulos\n",
+    "hl_edit_df[\"estatus\"] = 1\n",
+    "hl_edit_df[\"estatus\"].loc[hl_edit_df[\"elenco\"].isnull()] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jose Salas\\AppData\\Local\\Temp\\ipykernel_24544\\858065291.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  amz_edit_df[\"estatus\"] = 1\n",
+      "C:\\Users\\Jose Salas\\AppData\\Local\\Temp\\ipykernel_24544\\858065291.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  amz_edit_df[\"estatus\"].loc[amz_edit_df[\"fecha_añadidura\"].isnull()] = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Dar de baja lógica a los datos nulos\n",
+    "hl_edit_df[\"estatus\"] = 1\n",
+    "hl_edit_df[\"estatus\"].loc[hl_edit_df[\"fecha_añadidura\"].isnull()] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jose Salas\\AppData\\Local\\Temp\\ipykernel_24544\\858065291.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  amz_edit_df[\"estatus\"] = 1\n",
+      "C:\\Users\\Jose Salas\\AppData\\Local\\Temp\\ipykernel_24544\\858065291.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  amz_edit_df[\"estatus\"].loc[amz_edit_df[\"fecha_añadidura\"].isnull()] = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Dar de baja lógica a los datos nulos\n",
+    "hl_edit_df[\"estatus\"] = 1\n",
+    "hl_edit_df[\"estatus\"].loc[hl_edit_df[\"duration\"].isnull()] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_show</th>\n",
+       "      <th>tipo</th>\n",
+       "      <th>titulo</th>\n",
+       "      <th>elenco</th>\n",
+       "      <th>fecha_añadidura</th>\n",
+       "      <th>estreno</th>\n",
+       "      <th>duracion</th>\n",
+       "      <th>genero_cinematrografico</th>\n",
+       "      <th>plataforma</th>\n",
+       "      <th>estatus</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>s17</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Zoombies</td>\n",
+       "      <td>Marcus Anderson, Kaiwi Lyman, Andrew Asper</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>87 min</td>\n",
+       "      <td>Horror, Science Fiction</td>\n",
+       "      <td>Amazon Prime</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>s18</td>\n",
+       "      <td>TV Show</td>\n",
+       "      <td>Zoo Babies</td>\n",
+       "      <td>Narrator - Gillian Barlett</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>1 Season</td>\n",
+       "      <td>Kids, Special Interest</td>\n",
+       "      <td>Amazon Prime</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>s19</td>\n",
+       "      <td>TV Show</td>\n",
+       "      <td>Zoë Coombs Marr: Bossy Bottom</td>\n",
+       "      <td>Zoë Coombs Marr</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>1 Season</td>\n",
+       "      <td>Comedy, Talk Show and Variety</td>\n",
+       "      <td>Amazon Prime</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>s20</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Zoe</td>\n",
+       "      <td>Ewan McGregor, Léa Seydoux, Theo James, Mirand...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>104 min</td>\n",
+       "      <td>Science Fiction</td>\n",
+       "      <td>Amazon Prime</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>s21</td>\n",
+       "      <td>TV Show</td>\n",
+       "      <td>Zoboomafoo</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>1 Season</td>\n",
+       "      <td>Kids</td>\n",
+       "      <td>Amazon Prime</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id_show     tipo                         titulo  \\\n",
+       "16     s17    Movie                       Zoombies   \n",
+       "17     s18  TV Show                     Zoo Babies   \n",
+       "18     s19  TV Show  Zoë Coombs Marr: Bossy Bottom   \n",
+       "19     s20    Movie                            Zoe   \n",
+       "20     s21  TV Show                     Zoboomafoo   \n",
+       "\n",
+       "                                               elenco fecha_añadidura  \\\n",
+       "16         Marcus Anderson, Kaiwi Lyman, Andrew Asper             NaN   \n",
+       "17                         Narrator - Gillian Barlett             NaN   \n",
+       "18                                    Zoë Coombs Marr             NaN   \n",
+       "19  Ewan McGregor, Léa Seydoux, Theo James, Mirand...             NaN   \n",
+       "20                                                NaN             NaN   \n",
+       "\n",
+       "    estreno  duracion        genero_cinematrografico    plataforma  estatus  \n",
+       "16     2016    87 min        Horror, Science Fiction  Amazon Prime        0  \n",
+       "17     2008  1 Season         Kids, Special Interest  Amazon Prime        0  \n",
+       "18     2020  1 Season  Comedy, Talk Show and Variety  Amazon Prime        0  \n",
+       "19     2018   104 min                Science Fiction  Amazon Prime        0  \n",
+       "20     2001  1 Season                           Kids  Amazon Prime        0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "hl_edit_df.loc[hl_edit_df[\"estatus\"] == 0].head()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
