--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -7092,6 +7092,428 @@
     "#Duplicar el dataframe original conservando únicamente las columnas de interes\n",
     "ntflx_edit_df = ntflx_df[columns]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#   Definimos la nueva denominación que tendrán las columnas de interes\n",
+    "renamed_columns = {\n",
+    "                    \"show_id\":\"id_show\",\n",
+    "                    \"type\":\"tipo\",\n",
+    "                    \"title\":\"titulo\",\n",
+    "                    \"cast\":\"elenco\",\n",
+    "                    \"date_added\":\"fecha_añadidura\",\n",
+    "                    \"release_year\":\"estreno\",\n",
+    "                    \"duration\":\"duracion\",\n",
+    "                    \"listed_in\":\"genero_cinematrografico\"\n",
+    "                    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jose Salas\\AppData\\Local\\Temp\\ipykernel_24544\\691127811.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  amz_edit_df.rename(columns = renamed_columns, inplace = True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Renombrar el dataframe\n",
+    "ntflx_edit_df.rename(columns = renamed_columns, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_show</th>\n",
+       "      <th>tipo</th>\n",
+       "      <th>titulo</th>\n",
+       "      <th>elenco</th>\n",
+       "      <th>fecha_añadidura</th>\n",
+       "      <th>estreno</th>\n",
+       "      <th>duracion</th>\n",
+       "      <th>genero_cinematrografico</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>s1</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>The Grand Seduction</td>\n",
+       "      <td>Brendan Gleeson, Taylor Kitsch, Gordon Pinsent</td>\n",
+       "      <td>March 30, 2021</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>113 min</td>\n",
+       "      <td>Comedy, Drama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>s2</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Take Care Good Night</td>\n",
+       "      <td>Mahesh Manjrekar, Abhay Mahajan, Sachin Khedekar</td>\n",
+       "      <td>March 30, 2021</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>110 min</td>\n",
+       "      <td>Drama, International</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>s3</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Secrets of Deception</td>\n",
+       "      <td>Tom Sizemore, Lorenzo Lamas, Robert LaSardo, R...</td>\n",
+       "      <td>March 30, 2021</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>74 min</td>\n",
+       "      <td>Action, Drama, Suspense</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>s4</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Pink: Staying True</td>\n",
+       "      <td>Interviews with: Pink, Adele, Beyoncé, Britney...</td>\n",
+       "      <td>March 30, 2021</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>69 min</td>\n",
+       "      <td>Documentary</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>s5</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Monster Maker</td>\n",
+       "      <td>Harry Dean Stanton, Kieran O'Brien, George Cos...</td>\n",
+       "      <td>March 30, 2021</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>45 min</td>\n",
+       "      <td>Drama, Fantasy</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  id_show   tipo                titulo  \\\n",
+       "0      s1  Movie   The Grand Seduction   \n",
+       "1      s2  Movie  Take Care Good Night   \n",
+       "2      s3  Movie  Secrets of Deception   \n",
+       "3      s4  Movie    Pink: Staying True   \n",
+       "4      s5  Movie         Monster Maker   \n",
+       "\n",
+       "                                              elenco fecha_añadidura  estreno  \\\n",
+       "0     Brendan Gleeson, Taylor Kitsch, Gordon Pinsent  March 30, 2021     2014   \n",
+       "1   Mahesh Manjrekar, Abhay Mahajan, Sachin Khedekar  March 30, 2021     2018   \n",
+       "2  Tom Sizemore, Lorenzo Lamas, Robert LaSardo, R...  March 30, 2021     2017   \n",
+       "3  Interviews with: Pink, Adele, Beyoncé, Britney...  March 30, 2021     2014   \n",
+       "4  Harry Dean Stanton, Kieran O'Brien, George Cos...  March 30, 2021     1989   \n",
+       "\n",
+       "  duracion  genero_cinematrografico  \n",
+       "0  113 min            Comedy, Drama  \n",
+       "1  110 min     Drama, International  \n",
+       "2   74 min  Action, Drama, Suspense  \n",
+       "3   69 min              Documentary  \n",
+       "4   45 min           Drama, Fantasy  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Comprobar que el dataframe haya sido actualizado con los cambios indicados\n",
+    "ntflx_edit_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jose Salas\\AppData\\Local\\Temp\\ipykernel_24544\\4100712.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dsny_edit_df[\"plataforma\"] = \"Disney Plus\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Añadir tipo de plataforma\n",
+    "ntflx_edit_df[\"plataforma\"] = \"Netflix\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_show</th>\n",
+       "      <th>tipo</th>\n",
+       "      <th>titulo</th>\n",
+       "      <th>elenco</th>\n",
+       "      <th>fecha_añadidura</th>\n",
+       "      <th>estreno</th>\n",
+       "      <th>duracion</th>\n",
+       "      <th>genero_cinematrografico</th>\n",
+       "      <th>plataforma</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>s1</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Duck the Halls: A Mickey Mouse Christmas Special</td>\n",
+       "      <td>Chris Diamantopoulos, Tony Anselmo, Tress MacN...</td>\n",
+       "      <td>November 26, 2021</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>23 min</td>\n",
+       "      <td>Animation, Family</td>\n",
+       "      <td>Disney Plus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>s2</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Ernest Saves Christmas</td>\n",
+       "      <td>Jim Varney, Noelle Parker, Douglas Seale</td>\n",
+       "      <td>November 26, 2021</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>91 min</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>Disney Plus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>s3</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>Ice Age: A Mammoth Christmas</td>\n",
+       "      <td>Raymond Albert Romano, John Leguizamo, Denis L...</td>\n",
+       "      <td>November 26, 2021</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>23 min</td>\n",
+       "      <td>Animation, Comedy, Family</td>\n",
+       "      <td>Disney Plus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>s4</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>The Queen Family Singalong</td>\n",
+       "      <td>Darren Criss, Adam Lambert, Derek Hough, Alexa...</td>\n",
+       "      <td>November 26, 2021</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>41 min</td>\n",
+       "      <td>Musical</td>\n",
+       "      <td>Disney Plus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>s5</td>\n",
+       "      <td>TV Show</td>\n",
+       "      <td>The Beatles: Get Back</td>\n",
+       "      <td>John Lennon, Paul McCartney, George Harrison, ...</td>\n",
+       "      <td>November 25, 2021</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1 Season</td>\n",
+       "      <td>Docuseries, Historical, Music</td>\n",
+       "      <td>Disney Plus</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  id_show     tipo                                            titulo  \\\n",
+       "0      s1    Movie  Duck the Halls: A Mickey Mouse Christmas Special   \n",
+       "1      s2    Movie                            Ernest Saves Christmas   \n",
+       "2      s3    Movie                      Ice Age: A Mammoth Christmas   \n",
+       "3      s4    Movie                        The Queen Family Singalong   \n",
+       "4      s5  TV Show                             The Beatles: Get Back   \n",
+       "\n",
+       "                                              elenco    fecha_añadidura  \\\n",
+       "0  Chris Diamantopoulos, Tony Anselmo, Tress MacN...  November 26, 2021   \n",
+       "1           Jim Varney, Noelle Parker, Douglas Seale  November 26, 2021   \n",
+       "2  Raymond Albert Romano, John Leguizamo, Denis L...  November 26, 2021   \n",
+       "3  Darren Criss, Adam Lambert, Derek Hough, Alexa...  November 26, 2021   \n",
+       "4  John Lennon, Paul McCartney, George Harrison, ...  November 25, 2021   \n",
+       "\n",
+       "   estreno  duracion        genero_cinematrografico   plataforma  \n",
+       "0     2016    23 min              Animation, Family  Disney Plus  \n",
+       "1     1988    91 min                         Comedy  Disney Plus  \n",
+       "2     2011    23 min      Animation, Comedy, Family  Disney Plus  \n",
+       "3     2021    41 min                        Musical  Disney Plus  \n",
+       "4     2021  1 Season  Docuseries, Historical, Music  Disney Plus  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Inspeccionar el df\n",
+    "ntflx_edit_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jose Salas\\AppData\\Local\\Temp\\ipykernel_24544\\816854927.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  amz_edit_df[\"estatus\"] = 1\n",
+      "C:\\Users\\Jose Salas\\AppData\\Local\\Temp\\ipykernel_24544\\816854927.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  amz_edit_df[\"estatus\"].loc[amz_df[\"cast\"].isnull()] = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Dar de baja lógica a los datos nulos\n",
+    "ntflx_edit_df[\"estatus\"] = 1\n",
+    "ntflx_edit_df[\"estatus\"].loc[ntflx_edit_df[\"elenco\"].isnull()] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jose Salas\\AppData\\Local\\Temp\\ipykernel_24544\\858065291.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  amz_edit_df[\"estatus\"] = 1\n",
+      "C:\\Users\\Jose Salas\\AppData\\Local\\Temp\\ipykernel_24544\\858065291.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  amz_edit_df[\"estatus\"].loc[amz_edit_df[\"fecha_añadidura\"].isnull()] = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Dar de baja lógica a los datos nulos\n",
+    "ntflx_edit_df[\"estatus\"] = 1\n",
+    "ntflx_edit_df[\"estatus\"].loc[ntflx_edit_df[\"fecha_añadidura\"].isnull()] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jose Salas\\AppData\\Local\\Temp\\ipykernel_24544\\858065291.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  amz_edit_df[\"estatus\"] = 1\n",
+      "C:\\Users\\Jose Salas\\AppData\\Local\\Temp\\ipykernel_24544\\858065291.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  amz_edit_df[\"estatus\"].loc[amz_edit_df[\"fecha_añadidura\"].isnull()] = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Dar de baja lógica a los datos nulos\n",
+    "ntflx_edit_df[\"estatus\"] = 1\n",
+    "ntflx_edit_df[\"estatus\"].loc[ntflx_edit_df[\"duration\"].isnull()] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ntflx_edit_df.loc[ntflx_edit_df[\"estatus\"] == 0].head()"
+   ]
   }
  ],
  "metadata": {
